# amanda-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
amanda-core/: Cargo.toml
amanda-core/src/: amaudit.rs  amconf.rs  amrpt.rs  lib.rs
amanda-watch/: Cargo.toml  README.md
amanda-watch/src/: alert.rs  filter.rs  main.rs  monitor.rs  output.rs  snapshot.rs  tui.rs
homebrew-tap/: README.md
homebrew-tap/Formula/: amanda-watch.rb
scripts/: build-deb.sh
