[workspace]
members = ["amanda-core", "amanda-watch"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["corinoah1013 <corinoah1013@github.com>"]
license = "MIT"
repository = "https://github.com/corinoah1013/amanda-cli"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# System info (para amanda-watch)
sysinfo = "0.33"

# Crypto (para hash chains en amanda-logs/amanda-core)
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Text processing
regex = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
