[package]
name = "amanda-watch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Process and resource monitoring for Amanda OS"

[[bin]]
name = "amanda-watch"
path = "src/main.rs"

[dependencies]
amanda-core = { path = "../amanda-core" }

sysinfo = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
# Tests
